Changed toolbar icons for better aesthetics Added detached toolbar Added Tray Icon ability using TrayIconFX