@@ -207,10 +207,10 @@
                             <platform>auto</platform>
                             <createZipball>false</createZipball>
                             <createTarball>true</createTarball>
-                            <vmArgs>
-                                <vmArg>--module-path=Java/libs</vmArg>
-                                <vmArg>--add-modules=javafx.controls,javafx.graphics,javafx.web</vmArg>
-                            </vmArgs>
+<!--                            <vmArgs>
+                                <vmArg>&#45;&#45;module-path=Java/libs</vmArg>
+                                <vmArg>&#45;&#45;add-modules=javafx.controls,javafx.graphics,javafx.web</vmArg>
+                            </vmArgs>-->
 <!--
                             <winConfig>
                                 <headerType>gui</headerType>
